# axklib

./: Cargo.toml  README.md  crates.js  help.html  index.html  settings.html  src-files.js
.github/workflow/: check.yml  deploy.yml  release.yml  test.yml
.github/workflows/: deploy.yml
axklib/: all.html  attr.impl_extern_trait.html  index.html  macro.impl_trait.html  sidebar-items.js  struct.PhysAddr.html  struct.VirtAddr.html  trait.Klib.html  type.AxResult.html  type.IrqHandler.html
axklib/irq/: index.html
axklib/klib/: fn.irq_register.html  fn.irq_set_enable.html  fn.mem_iomap.html  fn.time_busy_wait.html  index.html  sidebar-items.js
axklib/mem/: index.html
axklib/time/: index.html
search.index/: 0b422544e28d.js  7e101816bd03.js  root.js
search.index/crateNames/: feb604ff2eb2.js
search.index/desc/: d9f535498bcf.js
search.index/entry/: 2fb36f364bb2.js
search.index/function/: 2f331223b810.js
search.index/generic_inverted_index/: 78bd0f797de3.js
search.index/name/: e5942f299ee9.js
search.index/normalizedName/: 7d45f556043f.js
search.index/path/: 096f8acbd4f9.js
search.index/type/: 437d856b5659.js
src/axklib/: lib.rs.html
tests/: mock_test.rs
type.impl/core/: primitive.fn.js
type.impl/core/result/: enum.Result.js
