[package]
name = "axklib"
version = "prerelease-0.2.0"
edition = "2024"
authors = ["周睿 <zrufo747@outlook.com>"]
description = "Small kernel-helper abstractions used across the microkernel"
repository = "https://github.com/numpy1314/axklib" 
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
keywords = ["arceos", "kernel"]
categories = ["os", "no-std"]
readme = "README.md"
categories = ["os", "embedded"]
documentation = "https://numpy1314.github.io/axklib"

[dependencies]
axerrno = "0.1"
memory_addr = "0.4"
trait-ffi = "0.2"
